# Document-Scanner

./: README.md  requirements.txt  setup.cfg  setup.py
scanner/: __main__.py
scanner/interacter/: interacter.py
scanner/qrbar/: qrbar.py
src/: directory.py  interacter.py  langNN.ipynb  language.py  qrbar.py  scan.py  scanner.py  textrecognition.py
src/language/: language.py
src/textrecognition/: textrecognition.py
