[metadata]
name = Document Scanner
description = OCR Document Scanner 
author = Rostyslav Mosorov
license = MIT
license_file = LICENSE
platforms = unix, linux, osx

[options]
packages = find:

python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=3.9
    tox>=3.24


